--- a/testers/auth_tester/index.html
+++ b/testers/auth_tester/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <a
-      href="https://accounts.spotify.com/authorize?client_id=c20c55af282e447fa34d7413b6fb8518&response_type=code&redirect_uri=https%3A%2F%2Fexample.com&scope=user-read-private%20user-modify-playback-state&state=34fFs29kd09"
+      href="https://accounts.spotify.com/authorize?client_id=c20c55af282e447fa34d7413b6fb8518&response_type=code&redirect_uri=https%3A%2F%2Flocalhost:3000&scope=user-read-private%20user-modify-playback-state&state=34fFs29kd09"
     >
       Click to auth
     </a>
